MGDCTRS-109 Add error_handler capability for Debezium connectors